# cs50x-cpp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
mario-less/: main.cpp  mario  mario.cpp
original/Week 1 - C/cash/: cash  cash.c
original/Week 1 - C/credit/: credit.c
original/Week 1 - C/mario-less/: joe.c
original/Week 1 - C/mario-more/: mario
original/Week 1 - C/world/: hello.c
original/week1/credit/: credit
original/week1/mario-less/: mario  mario.c
original/week1/mario-more/: mario.c
original/week1/me/: hello.c
original/week2/caesar/: caesar  caesar.c
original/week2/readability/: readability.c
original/week2/scrabble/: scrabble  scrabble.c
original/week2/substitution/: sub_og.c
original/week3/runoff/: runoff
original/week3/sort/: test.sh  test_results.txt
original/week4/filter-less/: filter  helpers.c
original/week4/volume/: volume  volume.c
original/week5/speller/: speller
src/original/week1/cash/: cash.c
src/original/week1/me/: hello
src/original/week1/world/: hello
src/original/week2/readability/: readability
src/original/week2/substitution/: substitution  substitution.c
src/original/week3/plurality/: plurality  plurality.c
src/original/week3/runoff/: .help.txt.swp  runoff.c  tabulate.txt
src/original/week3/sort/: answers.txt
src/original/week4/filter-more/: filter  helpers.c
src/original/week4/recover/: recover  recover.c
src/original/week5/inheritance/: inheritance  inheritance.c
src/original/week5/speller/: dictionary.c
src/week1/cash/: cash.cpp
src/week1/credit/: credit.cpp
src/week3/plurality/: plurality.cpp
src/week3/runoff/: runoff.cpp
src/week3/sort/: README.md  sort  sort.cpp  test.sh
week1/: cash.cpp  credit.cpp  hello.cpp  mario-more.cpp
week1/mario-less/: mario-less.cpp
week2/: caesar.cpp  readability.cpp  scrabble.cpp
week3/: README.md  sort.cpp
week3/sort/: sort.cpp
week3/sort/data/: random200000.txt  text_generator.py
(+2 files in other folders)
